--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         type="button"
                         class="btn btn-sm btn-outline-secondary"
                       >
-                        <a href="http://127.0.0.1:3000/index3.html"
+                        <a href="https://nitish-ku.github.io/perimeter-area/"
                           >Get Started</a
                         >
                       </button>
